deploy/production/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: maksym
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.2
        ports:
          - containerPort: 27017
        resources:
          requests:
            cpu: "80m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: maksym
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
