deploy/production/wiki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: maksym
  labels:
    app: wiki
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - name: mywiki-wiki
        image: robinlant/mywiki-wiki
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50mi"
            memory: "100Mi"
          limits:
            cpu: "250mi"
            memory: "500Mi"

---
apiVersion: v1
kind: Service
metadata:
  namespace: maksym
  name: wiki
spec:
  type: NodePort
  selector:
    app: wiki
  ports:
  - port: 8000
    targetPort: 8000
