deploy/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: maksym
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: wiki
      port:
        number: 8000
